// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using VmPortal.Core.Data;

#nullable disable

namespace VmPortal.Core.Data.Migrations
{
    [DbContext(typeof(VmPortalDbContext))]
    [Migration("20260825152926_SeedTf5ForeignVmTestCase")]
    partial class SeedTf5ForeignVmTestCase
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "8.0.8");

            modelBuilder.Entity("VmPortal.Core.Data.Entities.GroupPermission", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("RoleId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("UserGroupId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("VmGroupId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("RoleId");

                    b.HasIndex("UserGroupId");

                    b.HasIndex("VmGroupId", "UserGroupId", "RoleId")
                        .IsUnique();

                    b.ToTable("GroupPermissions");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            RoleId = 3,
                            UserGroupId = 3,
                            VmGroupId = 1
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.Role", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<bool>("IsSystemRole")
                        .HasColumnType("INTEGER");

                    b.Property<int>("Level")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.ToTable("Roles");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            IsSystemRole = true,
                            Level = 0,
                            Name = "Viewer"
                        },
                        new
                        {
                            Id = 2,
                            IsSystemRole = true,
                            Level = 1,
                            Name = "Operator"
                        },
                        new
                        {
                            Id = 3,
                            IsSystemRole = true,
                            Level = 2,
                            Name = "PowerUser"
                        },
                        new
                        {
                            Id = 4,
                            IsSystemRole = true,
                            Level = 3,
                            Name = "Admin"
                        },
                        new
                        {
                            Id = 5,
                            IsSystemRole = true,
                            Level = 4,
                            Name = "FullAdmin"
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.RoleAction", b =>
                {
                    b.Property<int>("RoleId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("ActionId")
                        .HasColumnType("INTEGER");

                    b.HasKey("RoleId", "ActionId");

                    b.HasIndex("ActionId");

                    b.ToTable("RoleActions");

                    b.HasData(
                        new
                        {
                            RoleId = 1,
                            ActionId = 1
                        },
                        new
                        {
                            RoleId = 1,
                            ActionId = 2
                        },
                        new
                        {
                            RoleId = 1,
                            ActionId = 3
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 1
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 2
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 3
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 4
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 5
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 6
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 7
                        },
                        new
                        {
                            RoleId = 2,
                            ActionId = 8
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 1
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 2
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 3
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 4
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 5
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 6
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 7
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 8
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 9
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 10
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 11
                        },
                        new
                        {
                            RoleId = 3,
                            ActionId = 12
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 1
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 2
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 3
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 4
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 5
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 6
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 7
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 8
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 9
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 10
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 11
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 12
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 13
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 14
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 15
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 16
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 17
                        },
                        new
                        {
                            RoleId = 4,
                            ActionId = 18
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 1
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 2
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 3
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 4
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 5
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 6
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 7
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 8
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 9
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 10
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 11
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 12
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 13
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 14
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 15
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 16
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 17
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 18
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 19
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 20
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 21
                        },
                        new
                        {
                            RoleId = 5,
                            ActionId = 22
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.UserGroup", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.ToTable("UserGroups");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Name = "ESX Admins"
                        },
                        new
                        {
                            Id = 2,
                            Name = "VM-Portal-Benutzer"
                        },
                        new
                        {
                            Id = 3,
                            Name = "ESXUserIT"
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VirtualMachineGroup", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.ToTable("VirtualMachineGroups");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Name = "Testumgebung-HVP"
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VirtualMachineRecord", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int?>("GroupId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int>("ServerId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("VmGuid")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("GroupId");

                    b.HasIndex("ServerId");

                    b.ToTable("VirtualMachines", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            GroupId = 1,
                            Name = "HVP_1",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 2,
                            GroupId = 1,
                            Name = "HVP_2",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 3,
                            GroupId = 1,
                            Name = "HVP_3",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 4,
                            GroupId = 1,
                            Name = "HVP_4",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 5,
                            GroupId = 1,
                            Name = "HVP_5",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 6,
                            GroupId = 1,
                            Name = "HVP_6",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 7,
                            GroupId = 1,
                            Name = "HVP_7",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 8,
                            GroupId = 1,
                            Name = "HVP_8",
                            ServerId = 3
                        },
                        new
                        {
                            Id = 9,
                            GroupId = 1,
                            Name = "HVP_9",
                            ServerId = 3
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VirtualServer", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Address")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Platform")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("VirtualServers");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Address = "MHM-HYPERV1.archiv.mhm.siemens.com",
                            Name = "MHM-HYPERV1",
                            Platform = "HyperV"
                        },
                        new
                        {
                            Id = 2,
                            Address = "MHM-HYPERV3.archiv.mhm.siemens.com",
                            Name = "MHM-HYPERV3",
                            Platform = "HyperV"
                        },
                        new
                        {
                            Id = 3,
                            Address = "MHM-HYPERV4.archiv.mhm.siemens.com",
                            Name = "MHM-HYPERV4",
                            Platform = "HyperV"
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VmActionEntity", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.ToTable("VMActions", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Name = "ViewStatus"
                        },
                        new
                        {
                            Id = 2,
                            Name = "ViewDetails"
                        },
                        new
                        {
                            Id = 3,
                            Name = "ViewMetering"
                        },
                        new
                        {
                            Id = 4,
                            Name = "Start"
                        },
                        new
                        {
                            Id = 5,
                            Name = "Stop"
                        },
                        new
                        {
                            Id = 6,
                            Name = "Pause"
                        },
                        new
                        {
                            Id = 7,
                            Name = "Resume"
                        },
                        new
                        {
                            Id = 8,
                            Name = "SaveState"
                        },
                        new
                        {
                            Id = 9,
                            Name = "Reset"
                        },
                        new
                        {
                            Id = 10,
                            Name = "SnapshotCreate"
                        },
                        new
                        {
                            Id = 11,
                            Name = "SnapshotApply"
                        },
                        new
                        {
                            Id = 12,
                            Name = "ConsoleConnect"
                        },
                        new
                        {
                            Id = 13,
                            Name = "SnapshotDelete"
                        },
                        new
                        {
                            Id = 14,
                            Name = "ResizeRam"
                        },
                        new
                        {
                            Id = 15,
                            Name = "ResizeCpu"
                        },
                        new
                        {
                            Id = 16,
                            Name = "AttachNetworkAdapter"
                        },
                        new
                        {
                            Id = 17,
                            Name = "VhdResize"
                        },
                        new
                        {
                            Id = 18,
                            Name = "VhdCompact"
                        },
                        new
                        {
                            Id = 19,
                            Name = "Export"
                        },
                        new
                        {
                            Id = 20,
                            Name = "Import"
                        },
                        new
                        {
                            Id = 21,
                            Name = "Clone"
                        },
                        new
                        {
                            Id = 22,
                            Name = "LiveMigrate"
                        });
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.GroupPermission", b =>
                {
                    b.HasOne("VmPortal.Core.Data.Entities.Role", "Role")
                        .WithMany("GroupPermissions")
                        .HasForeignKey("RoleId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("VmPortal.Core.Data.Entities.UserGroup", "UserGroup")
                        .WithMany("GroupPermissions")
                        .HasForeignKey("UserGroupId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("VmPortal.Core.Data.Entities.VirtualMachineGroup", "VmGroup")
                        .WithMany("GroupPermissions")
                        .HasForeignKey("VmGroupId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Role");

                    b.Navigation("UserGroup");

                    b.Navigation("VmGroup");
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.RoleAction", b =>
                {
                    b.HasOne("VmPortal.Core.Data.Entities.VmActionEntity", "Action")
                        .WithMany("RoleActions")
                        .HasForeignKey("ActionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("VmPortal.Core.Data.Entities.Role", "Role")
                        .WithMany("RoleActions")
                        .HasForeignKey("RoleId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Action");

                    b.Navigation("Role");
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VirtualMachineRecord", b =>
                {
                    b.HasOne("VmPortal.Core.Data.Entities.VirtualMachineGroup", "Group")
                        .WithMany("VirtualMachines")
                        .HasForeignKey("GroupId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.HasOne("VmPortal.Core.Data.Entities.VirtualServer", "Server")
                        .WithMany()
                        .HasForeignKey("ServerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Group");

                    b.Navigation("Server");
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.Role", b =>
                {
                    b.Navigation("GroupPermissions");

                    b.Navigation("RoleActions");
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.UserGroup", b =>
                {
                    b.Navigation("GroupPermissions");
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VirtualMachineGroup", b =>
                {
                    b.Navigation("GroupPermissions");

                    b.Navigation("VirtualMachines");
                });

            modelBuilder.Entity("VmPortal.Core.Data.Entities.VmActionEntity", b =>
                {
                    b.Navigation("RoleActions");
                });
#pragma warning restore 612, 618
        }
    }
}
