@startuml er_diagramm_autorisierung
title Implementierte Autorisierungsschicht (SQLite/EF Core)

skinparam backgroundColor white
skinparam shadowing false
skinparam roundCorner 0
skinparam defaultFontSize 12
skinparam entity {
  BackgroundColor #F5F5F5
  BorderColor #4D4D4D
  ArrowColor #4D4D4D
}
skinparam note {
  BackgroundColor #FAFAFA
  BorderColor #999999
}

note as N1
  Persistente RBAC-Schicht neben dem Active Directory
  (Hybrid: AD authentifiziert, SQLite autorisiert).
  Ersetzt die zuvor im JWT-Claim "vmroles" gefuehrte,
  nicht persistente Zuordnung (Kapitel 5.3/6.3).
end note

entity "VirtualServers" as VirtualServers {
  * Id : PK
  --
  Address, Platform, Name
}

entity "VirtualMachines" as VirtualMachines {
  * Id : PK
  --
  ServerId : FK -> VirtualServers.Id
  GroupId : FK -> VirtualMachineGroups.Id (nullable)
  Name, VmGuid (nullable)
  ..
  GroupId = null -> secure-by-default
}

entity "VirtualMachineGroups" as VirtualMachineGroups {
  * Id : PK
  --
  Name : string
}

entity "UserGroups" as UserGroups {
  * Id : PK
  --
  Name : string
  ..
  1:1-Abbild einer AD-Gruppe
}

entity "Roles" as Roles {
  * Id : PK
  --
  Name, IsSystemRole, Level
}

entity "VMActions" as VMActions {
  * Id : PK
  --
  Name : string
  ..
  Abbild von VmAction (22 Werte)
}

entity "RoleActions" as RoleActions {
  * Id : PK
  --
  RoleId : FK -> Roles.Id
  ActionId : FK -> VMActions.Id
  ..
  explizite Rechtemenge je Rolle,
  keine Vererbung
}

entity "GroupPermissions" as GroupPermissions {
  * Id : PK
  --
  VmGroupId : FK -> VirtualMachineGroups.Id
  UserGroupId : FK -> UserGroups.Id
  RoleId : FK -> Roles.Id
  ..
  mehrere Rollen pro Paar moeglich
  -> Union statt "hoechste Rolle gewinnt"
}

VirtualServers ||--o{ VirtualMachines : hostet
VirtualMachineGroups |o--o{ VirtualMachines : enthaelt (optional)

Roles ||--o{ RoleActions : erlaubt
VMActions ||--o{ RoleActions : ist erlaubt in

VirtualMachineGroups ||--o{ GroupPermissions : wird berechtigt fuer
UserGroups ||--o{ GroupPermissions : erhaelt Berechtigung auf
Roles ||--o{ GroupPermissions : als zugewiesene Rolle

@enduml
